# hodoku-py

./: .clang-tidy  .codacy.yml  .flake8  .gitignore  CLAUDE.md  Dockerfile.claude  Dockerfile.dev  HardestDatabase110626.html  LICENSE  Makefile  README.md  claude.sh  codecov.yml  coverage.json  exemplars-1.0.html  failures-detail.txt  failures.txt  index.html  null.out.txt  perf.py  pyproject.toml  qqwing_easy.html  qqwing_expert.html  qqwing_intermediate.html  qqwing_simple.html  setup.py  top1465.html
.claude/: settings.local.json
.github/workflows/: accel-fallback-nightly.yml  ci.yml  coverage-nightly.yml  deploy-test.yml  lint.yml  parity-manual.yml  parity-nightly.yml  parity.yml  publish.yml
coverage/: class_index.html  coverage.json  function_index.html  index.html  status.json  z_1a3cad2e6a8c50b6___init___py.html  z_1a3cad2e6a8c50b6_als_py.html  z_1a3cad2e6a8c50b6_brute_force_py.html  z_1a3cad2e6a8c50b6_chain_utils_py.html  z_1a3cad2e6a8c50b6_chains_py.html  z_1a3cad2e6a8c50b6_coloring_py.html  z_1a3cad2e6a8c50b6_fish_py.html  z_1a3cad2e6a8c50b6_misc_py.html  z_1a3cad2e6a8c50b6_simple_py.html  z_1a3cad2e6a8c50b6_single_digit_py.html  z_1a3cad2e6a8c50b6_solver_py.html  z_1a3cad2e6a8c50b6_step_finder_py.html  z_1a3cad2e6a8c50b6_table_entry_py.html  z_1a3cad2e6a8c50b6_tabling_py.html  z_1a3cad2e6a8c50b6_templates_py.html  z_1a3cad2e6a8c50b6_uniqueness_py.html  z_1a3cad2e6a8c50b6_wings_py.html  z_3e7fd7eec545f7a3___init___py.html  z_3e7fd7eec545f7a3_generator_py.html  z_3e7fd7eec545f7a3_pattern_py.html  z_b60265b3a02fe3d6___init___py.html  z_b60265b3a02fe3d6_cell_set_py.html  z_b60265b3a02fe3d6_grid_py.html  z_b60265b3a02fe3d6_scoring_py.html  z_b60265b3a02fe3d6_solution_step_py.html  z_b60265b3a02fe3d6_types_py.html  z_d804126ac3066fcd___init___py.html  z_d804126ac3066fcd_api_py.html  z_d804126ac3066fcd_config_py.html
docker/: Dockerfile.claude  Makefile  claude.json  claude.sh  docker-compose.yml
docs/: ARCHITECTURE.md  CODEBASE_MAP.md  EXEMPLAR_FAILURES.md  GENERATOR_SPEC.md  HODOKU_VERSIONS.md  REGLIB_STATUS.md  ROADMAP.md  SPEC_ROW16_ALS.md  SPEC_ROW17_GNL.md  SPEC_ROWS9-11.md  SPEC_TABLING.md  cibuildwheel.md  debugging-parity-failures.md  parity-reporting-plan.md  spec_gui_views.md  spec_solver_config.md
hodoku/: Dockerfile  bf2.txt  bf3.txt  bf4.txt  bug1.txt  er.txt  fbf2.txt  fbf3.txt  hodoku.sh  hr.txt  mc1.txt  mc2.txt  puzzles.txt  sc1.txt  sc2.txt  test.txt  test.txt.out.txt  u1.txt  u2.txt  u3.txt  u4.txt  u5.txt  u6.txt  w.txt  xy.txt  xyz.txt
hodoku/.claude/: settings.local.json
parity/: HardestDatabase110626.html  exemplars-1.0.html  index.html  qqwing_easy.html  qqwing_expert.html  qqwing_intermediate.html  qqwing_simple.html  top1465.html
scripts/: analyze_parity_junit.py  find_clean_puzzle.py  generate_parity_report.py  jj_branch_bookmarks.sh  update_known_failures.py
src/hodoku/: __init__.py  api.py  config.py
src/hodoku_py/: __init__.py  api.py
tests/: compare.py  conftest.py  hodoku_gateway.py  hodoku_harness.py  test_api.py  test_bad_inputs.py  test_brute_force.py  test_cell_set.py  test_config.py  test_gen_accel.py  test_generator.py  test_generator_gridgen.py  test_generator_parity.py  test_generator_pattern.py  test_grid.py  test_gui_views.py  test_solution_step.py  test_validate_aic.py  test_validate_als.py  test_validate_coloring.py  test_validate_finned_fish.py  test_validate_fish.py  test_validate_single_digit.py  test_validate_singles.py  test_validate_subsets.py  test_validate_uniqueness.py  test_validate_wings.py  test_validate_xchain.py  test_validate_xychain.py
tests/generator/: test_gen_accel.py  test_generator.py  test_generator_api.py  test_generator_gridgen.py  test_generator_integration.py  test_generator_parity.py  test_generator_pattern.py
tests/parity/: README.md  conftest.py  (+2 more)
(+64 files in other folders)
