[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hodoku-py"
version = "0.1.0"
description = "Python port of HoDoKu's sudoku solver, hint engine, and generator"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "py4j"]

[tool.hatch.build.targets.wheel]
packages = ["src/hodoku"]

[tool.pytest.ini_options]
testpaths = ["tests"]
junit_family = "legacy"
markers = [
    "unit: fast unit tests (no solver, no Java)",
    "java: requires hodoku.jar and Java (skipped automatically if unavailable)",
    "parity: head-to-head parity suite (opt-in; run with pytest tests/parity/)",
]
