[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hodoku-py"
version = "0.2.0"
description = "Python port of HoDoKu's sudoku solver, hint engine, and generator"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [{ name = "Alex Dejarnatt", email = "adejarnatt@gmail.com" }]
keywords = ["sudoku", "solver", "puzzle", "hint", "hodoku"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Intended Audience :: Developers",
]
requires-python = ">=3.11"  # int.bit_count() (popcount on CellSet bitsets) requires 3.11+
dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-flake8>=1.3.0",
    "pytest-cppcheck>=0.1.2",
    "pytest-clang-tidy>=0.2.0",
]
test-parity = ["py4j"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
hodoku = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cppcheck"
testpaths = ["src", "tests"]
cppcheck_args = [
    "--enable=warning,style,performance,portability",
     "--check-level=exhaustive"
]
clang_tidy_include_python_headers = true
junit_family = "legacy"
markers = [
    "unit: fast unit tests (no solver, no Java)",
    "java: requires hodoku.jar and Java (skipped automatically if unavailable)",
    "parity: head-to-head parity suite (opt-in; run with pytest tests/parity/)",
]
